@@ -1,5 +1,12 @@
 2010-06-30  Alan McGovern  <amcgovern@novell.com>
 
+	* Selector.cs: Don't try to handle ItemContainerStyle change
+	  events in Selector as ComboBox and ListBox have different
+	  semantics for some reason and it's impossible to do it
+	  simply. Unregresses the ComboBox test.
+
+2010-06-30  Alan McGovern  <amcgovern@novell.com>
+
 	* Selector.cs: When changing Selector.ItemContainerStyle
 	  ensure we replace all uses of the old style with the new
 	  style regardless of whether the item is its own container.
